# SMDB_Companion

./: .gitignore  .gitmodules  Cargo.toml  build_universal_binary.sh  deploy_beta.sh  deploy_release.sh  get_notary_log.sh  logfile.txt  make_public.sh  manual.php  notarization-log.json  package.json  pnpm-lock.yaml  run_debug.sh  test_color_schemes.js  update_DMG.sh  update_cargo.toml.sh  vite.config.js  waveform_log.txt  zbuild.rs
.github/workflows/: tauri-build-beta.yml  tauri-build-release.yml  tauri-build.yml
.svelte-kit/: ambient.d.ts
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/client/_app/immutable/chunks/: CAW8Yf8D.js  C__v_t7C.js  DGF-fiXx.js  DuSSP3kn.js  mBltkime.js  saORRO85.js
.svelte-kit/output/client/_app/immutable/entry/: app.BxkZxaUX.js
.svelte-kit/output/server/: index.js  manifest-full.js  manifest.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/output/server/chunks/: Select.svelte_svelte_type_style_lang.js  index.js  index2.js  internal.js
.svelte-kit/output/server/entries/fallbacks/: error.svelte.js
.svelte-kit/output/server/entries/pages/: _page.svelte.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js  3.js
.svelte-kit/types/: route_meta_data.json
.svelte-kit/types/src/routes/: $types.d.ts
.svelte-kit/types/src/routes/preferences/: $types.d.ts
.svelte-kit/types/src/routes/save/: $types.d.ts
.svelte-kit/types/src/routes/server/: $types.d.ts
ORIGINAL EFRAME ARCHIVE/: build_universal_binary.sh  entitlements.plist  send_message.sh
ORIGINAL EFRAME ARCHIVE/Contents/: Info.plist
ORIGINAL EFRAME ARCHIVE/Contents/_CodeSignature/: CodeResources
ORIGINAL EFRAME ARCHIVE/assets/DMG Source/: DS_Store
ORIGINAL EFRAME ARCHIVE/assets/zOLD_icons/: SMDBC_beta_Icon.icns
ORIGINAL EFRAME ARCHIVE/src/: app.rs  find_replace.rs  prelude.rs  ui.rs
ORIGINAL EFRAME ARCHIVE/src/duplicates/: basic.rs  compare.rs  deep.rs  duration.rs  order.rs  tags.rs
SMDB_Companion.app/Contents/: Info.plist
assets/: icon-1024.pxd
assets/DMG Source/SMDB_Companion.app/Contents/: Info.plist
assets/DMGtemplate/.fseventsd/: 0000000011bebea6  0000000011bebea7  000000001e1c5c39  000000001e1c5c3a  000000001e1c5c3c  000000001e1c8308  000000001e1c8309  000000001e1c830a  000000001e1c830b  000000001e1c8c92  000000001e1c8c93  000000001e1c9e17  000000001e1c9e18  000000001e1c9e1a  000000001e1c9f44  000000001e1c9f45  000000001e1ca3c0  000000001e1ca3c1  000000001e1cb324  000000001e1cb325  fseventsd-uuid
assets/ffmpeg/: ffmpeg
codex/: Cargo.toml
codex/src/: aif.rs  flac.rs  lib.rs  mp3.rs  resample.rs  wav.rs
scripts/: full_clean.sh  make_private.sh  release_up.sh  version_up.sh
src/: app.html  app.rs  assets.rs  config.rs  dupe_panel.rs  duplicates.rs  find_replace.rs  lib.rs  main.rs  prelude.rs  processing.rs  session-store.ts  store.ts  styles.css  styles_bu.css  ui.rs  window_manager.rs
src-tauri/: Cargo.toml  build.rs  build_beta.sh  build_chromaprint.rs  build_release.sh  build_universal_binary.sh  changelog.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/OLD RESOURCES/resources/: libchromaprint.1.dylib
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/sox/: build_sox.sh
src-tauri/src/: audio.rs  audiohash.rs  audioplayer.rs  commands.rs  database.rs  filerecord.rs  lib.rs  main.rs  preferences.rs  prelude.rs  search.rs  windows.rs
src-tauri/src/audio/: audiohash_old.rs  chromaprint.rs  decode.rs  decode_old.rs  encode.rs  ffmpeg.rs  metadata.rs  mod.rs  playback.rs  shazam_search.rs  shazam_style.rs  symphonia_play.rs
src-tauri/src/audio/zOld/: claude.rs  ffmpeg.rs  ffmpeg_next.rs  fft.rs  shazam_fingerprint_processing.rs  shazam_search_claude.rs
src-tauri/src/database/: filerecord.rs  mod.rs  mysql.rs  sqlite.rs
src-tauri/tests/: path_handling_test.rs
src/components/: AdvancedBU.svelte  AdvancedMode.svelte  DragDrop.svelte  Header.svelte  Menu.svelte  Metadata.svelte  MetadataResults.svelte  NoFrills.svelte  Register.svelte  RegisterOnly.svelte  Registration.svelte  Results.svelte  ResultsBU.svelte  ResultsSkinny.svelte  Search.svelte  SearchFolders.svelte  SearchSkinny.svelte  Search_BU  ServerConnect.svelte  Split.svelte  Status.svelte  VirtualTable.svelte  results_BU.svelte  template.svelte
src/components/metadata/: Button.svelte  Fields.svelte
src/components/popups/: Metadata.svelte  Remove.svelte  Search.svelte  SearchDatabase.svelte  SearchDatabaseContent.svelte  SearchFolders.svelte  SearchFoldersContent.svelte  ServerConnect.svelte
src/components/prefs/: ColorSchemes.svelte  Colors.svelte  Hotkeys.svelte  Main.svelte  Match.svelte  MatchPage.svelte  Order.svelte  SafeFolders.svelte  Select.svelte  Tags.svelte  WaveFormSearch.svelte
src/components/registration/: Button.svelte  Form.svelte
src/components/results/: AdvancedResults.svelte  SkinnyResults.svelte  StandardResults.svelte  Table.svelte  Toolbar.svelte  filterSwitch.svelte  removeBar.svelte  removeButton.svelte
src/components/results/common/: BaseResults.svelte  ResultsActions.svelte  ResultsUI.svelte  Table.svelte  Toolbar.svelte
src/components/search/: Algorithms.svelte  SearchButton.svelte
src/components/zOLD/: AdvancedMode.svelte  MetadataResults.svelte  Register.svelte  ResultsSkinny.svelte  SearchSkinny.svelte
src/duplicates/: basic.rs  compare.rs  deep.rs  duration.rs  nodes.rs  order.rs  remove.rs  tags.rs  valid_path.rs  waveform.rs
src/routes/: +page.svelte
src/routes/preferences/: +page.svelte
src/routes/preferences/full/: +page.svelte
src/routes/save/: +page.svelte
src/routes/server/: +page.svelte
src/stores/: algorithms.ts  colorSchemes.ts  colors.ts  database.ts  hotkeys.ts  index.ts  menu.ts  metadata.ts  preferences.ts  presets.ts  registration.ts  remove.ts  results.ts  search.ts  status.ts  types.ts  utils.ts
src/stores_OLD/: session-store.ts  store.ts
src/types/: svelte-virtual-list.d.ts
src/utils/: database.ts  menubar.svelte  preferences.ts  shared.ts
(+6 files in other folders)
