[package]
name = "SMDB_Companion"
version = "0.2.7"
authors = ["Tim Farrell <soundguru@gmail.com>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.76"
#build = "build.rs"

[package.metadata]
macos_deployment_target = "12.0"

[package.metadata.docs.rs]
all-features = true
#targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "aarch64-apple-darwin", "wasm32-unknown-unknown"]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[package.metadata.bundle]
identifier = "com.SMDB_Companion"
icon = ["assets/icon.icns"]

[package.metadata.bundle.bin.SMDB_Companion]
identifier = "com.SMDB_Companion"
icon = ["assets/icon.icns"]


#[lib]
#crate-type = ["cdylib"]

[build]
rustflags = ["-C", "target-feature=+crt-static"]

[dependencies]
egui = "0.29.1"
eframe = { version = "0.29.1", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
rfd = "0.15"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

regex = "1.11.0"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.40.0", features = ["full"] }
once_cell = "1.20.2"
rayon = "1.10.0"
futures = "0.3.31"
atomic = "0.6.0"
sha2 = "0.10.8"
hex = "0.4.3"
trash = "5.1.1"
clipboard = "0.5.0"
dirs = "5.0.1"
webbrowser = "1.0.2"
reqwest = "0.12.8"
claxon = "0.4.3"
hound = "3.5.1"
anyhow = "1.0.92"



# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.5"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

# to access the DOM (to hide the loading text)
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }



