[package]
name = "FFcodex"
version = "0.1.0"
edition = "2024"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ffcodex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[dependencies]
anyhow = "1.0.97"
bytemuck = { version = "1.22.0", features = ["derive"] }
byteorder = "1.5.0"
crc16 = "0.4.0"
flate2 = "1.1.1"
lame = "0.1.3"
lazy_static = "1.5.0"
memmap2 = "0.9.5"
minimp3 = "0.5.1"
rayon = "1.10.0"
wide = "0.7.32"
# packed_simd = "0.3.9"
